# coconvnc

./: .gitignore  CMakeLists.txt  coconvnc.c
cmake/modules/: FindLibVNCServer.cmake
